# fake_weather_mcp

./: README.md  pyproject.toml
src/resources/: weather_data.json
src/weather_mcp/: __init__.py  weather_tool.py
