[project]
name = "weather-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Akashns007", email = "akash.ns@thoughtclan.com" }
]
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.12.3",
]

[project.scripts]
weather-mcp = "weather_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
